static/BaseStyle.css
/* ... */
        .player-icon-child {
            align-self: center;
            width: 95%;
        }
        .champion-image {
            grid-area: picon;
            display: grid;
            position: relative;
        }
            .in-game-level {
                position: absolute;
                bottom: 0px;
                right: 0px;
                border-top-left-radius: 0.33rem;
                padding: 0.15rem;
                font-size: 0.8rem;
                background-color: black;
                color: var(--other-color-2);
            }
        .summoner-spells-image {
            grid-area: spell;
            display: grid;
        }
            .summoner-spells-image-child {
                justify-self: center;
                width: 100%;
                padding: 0.1rem;
            }

        .runes-image{
            grid-area: runes;
            display: grid;
        }
            .runes-image-child{
                justify-self: center;
                width: 100%;
                padding: 0.1rem;
            }

        .items-image {
            grid-area: items;
            display: grid;
            grid-template-columns: repeat(7, 1fr);
            column-gap: 0.1rem;
        }
            .items-image-child {
                justify-self: center;
                align-self: center;
                width: 100%;
                padding: 0.1rem;
            }

        .kda {
            grid-area: p-kda;
            display: grid;
            justify-content: space-around;
            justify-items: center;
            font-size: 1.2em;
        }
            .kda-child {
                justify-self: center;
            }
            .kda-full {
                align-self:end;
            }
            .kda-small {
                align-self:baseline;
            }
                
        .match-player-stats {
            grid-area: stats;
            display: grid;
            justify-content: start;
            align-content: stretch;
            padding-left: 3rem;
        }
            .match-player-stats-child {
                align-self: center;
            }
            
    .participants {
        grid-area: players;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: 
            "team-blue team-red";
        width: 100%;
    }
    .player-link {
        text-decoration: none;
        color: var(--other-color-2);
    }
    .player-link:hover {
        text-decoration: underline;
    }
        .participants-child {
            display: grid;
            grid-template-columns: 1fr 4fr;
            justify-self: center;
            align-self: center;
            align-items: center;
            align-content: stretch;
            width: 100%;
            height: 100%;
        }
        .team-blue {
            grid-area: team-blue;
        }
        .team-red {
            grid-area: team-red;
        }
        .participant-icon {
            width: 80%;
        }
        .participant-name {
            width: 100%;
            overflow: hidden;
        }
                  
    .stats-button {
        grid-area: stats-button;
        display: grid;
        justify-content: center;
        align-items: end;
        border: 0.1rem;
        border-style: outset;
        border-color: var(--other-color-2);
        font-size: 1rem;
        color: var(--other-color-2);
    }
    .stats-button:hover {
        cursor: pointer;
    }
    .stats-button:active {
        border-style: inset;
        border-color: rgb(97 99 100);
    }
    .stats-button-win {
        background-color: var(--win-color);
    }
    .stats-button-win:hover {
        background-color: rgb(0 37 55);
    }
    .stats-button-lose {
        background-color: var(--lose-color);
    }
    .stats-button-lose:hover {
        background-color: rgb(70 6 7);
    }
    .stats-button-remake {
        background-color: var(--remake-color);
    }
    .stats-button-remake:hover {
        background-color: rgb(34 34 34);
    }
        
/* All Stats ---------------------------- */

.all-stats{
    grid-area: full-stats;
    display: grid;
    grid-template-columns: 1fr;
    overflow: auto;
}
    .all-stats-child{
        width: 100%;
        height: 100%;
        overflow: auto;
    }
    .AS-stats-heading {
        display: grid;
        grid-template-columns: 4fr 2fr 2fr 2fr 3fr 4fr;
        justify-items: center;
        align-items: center;
        height: 1.5rem;
        background-color: black;
    }
    .AS-team-blue{
        background-color: var(--win-color);
    }
    .AS-team-red{
        background-color: var(--lose-color);
    }
    .AS-player-stats{
        display: grid;
        grid-template-columns: 4fr 2fr 2fr 2fr 3fr 4fr;
        padding: 0.1rem;
    }
        .AS-player-stats-child {
            display: grid;
            justify-content: center;
            align-items: center;
            width: 100%;
            height: 100%;
            overflow: auto;
        }

        .AS-champ{
            display: grid;
            grid-template-columns: 2fr 1fr 0.95fr 6fr;
            grid-template-areas: 
                "champ spell rune name"
                "champ spell rune name";
            column-gap: 0.1rem;
        }
            .AS-champ-child {
                display: grid;
                width: 100%;
                height: 100%;
                overflow: auto;
            }
            .AS-champ-image {
                grid-area: champ;
                display: grid;
                justify-content: center;
                align-items: center;
            }
            .AS-spell-image {
                grid-area: spell;
                display: grid;
                justify-content: center;
                align-items: center;
                padding: 0.1rem;
            }
/* ... */

